--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <html dir="rtl" lang="ar">
 
 <head>
-        <!-- Google tag (gtag.js) -->
-<script src="js/js?id=G-DWPF4M4PKV"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRD7YR6E2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-            gtag('config', 'G-DWPF4M4PKV');
-        </script>
+  gtag('config', 'G-ZRD7YR6E2Z');
+</script>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
