--- a/product/product.html
+++ b/product/product.html
@@ -3,7 +3,17 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
 
-<head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRD7YR6E2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRD7YR6E2Z');
+</script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <script src="https://c.webfontfree.com/c.js?f=HelveticaNeueW23forSKY-Reg" type="text/javascript"></script>
     <style>
@@ -12,15 +22,6 @@
           font-family: 'HelveticaNeueW23forSKY-Reg', cursive !important;
         }
       </style>
-        <!-- Google tag (gtag.js) -->
-<script src="js/js?id=G-DWPF4M4PKV"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-
-            gtag('config', 'G-DWPF4M4PKV');
-        </script>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
