--- a/contact/index.html
+++ b/contact/index.html
@@ -6,22 +6,21 @@
 <html dir="rtl" lang="ar">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRD7YR6E2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRD7YR6E2Z');
+</script>
     <script src="https://c.webfontfree.com/c.js?f=HelveticaNeueW23forSKY-Reg" type="text/javascript"></script>
 <style>
     * {
       font-family: 'HelveticaNeueW23forSKY-Reg', cursive !important;
     }
   </style>
-        <!-- Google tag (gtag.js) -->
-<script src="js/js?id=G-DWPF4M4PKV"></script>
-
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-
-            gtag('config', 'G-DWPF4M4PKV');
-        </script>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
