--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <link rel="stylesheet" type="text/css" href="css/main-rtl.css?v=4PHrOw_u5j-kCB5MWkjU1FS9Ke3EOH_rO2G34HON1gY">
 <link rel="stylesheet" type="text/css" href="css/home-rtl.css?v=K63nM7XhP29plPwJ50UDI1sP7Tpz9_FfuwjwNi3Qlsw">
 
-    <title> &#x627;&#x644;&#x628;&#x631;&#x643;&#x629;  - &#x641;&#x627;&#x62A;&#x648;&#x631;&#x629; </title>
+    <title>البركة</title>
 
     <script>
         function strLang(a, b) { return $('html').attr('lang') == 'ar' ? a : b; }
