--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <li class="nav-item nav-item-cart" style="height: 40px; width: 40px;">
                                 <a class="nav-link" onclick="CheckItemForCart()" href="javascript:;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart chang-cursor test-anmi icon-color-dunamic-global" id="dropdownMenuButton" onclick="openModal()"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-                                    <span id="numberitemMobile" class="badge d-lg-none bold-font chang-cursor">0</span>
+                                    <span id="numberitemMobile" class="badge desktop-number-item bold-font chang-cursor" data-toggle="dropdown">0</span>
                                 </a>
                             </li>
                         </ul>
