--- a/product/product.html
+++ b/product/product.html
@@ -229,7 +229,7 @@
                         <ul class="navbar-nav  navbar-nav-cart-mobile d-lg-none">
                             <li class="nav-item nav-item-cart" style="height: 40px; width: 40px;">
                                 <a class="nav-link" onclick="CheckItemForCart()" href="javascript:;">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart chang-cursor test-anmi icon-color-dunamic-global" id="dropdownMenuButton" onclick="openModal()"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart chang-cursor test-anmi icon-color-dunamic-global" id="dropdownMenuButton" ><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                                     <span id="numberitemMobile" class="badge d-lg-none bold-font chang-cursor">0</span>
                                 </a>
                             </li>
@@ -264,7 +264,7 @@
         
                                 <li class="nav-item d-none d-lg-block badge-li nav-item-cart">
                                     <a class="nav-link" onclick="CheckItemForCart()" href="javascript:;">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart chang-cursor test-anmi icon-color-dunamic-global" id="dropdownMenuButton" onclick="openModal()"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart chang-cursor test-anmi icon-color-dunamic-global" id="dropdownMenuButton" ><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                                         <span id="numberitem" class="badge desktop-number-item bold-font chang-cursor" data-toggle="dropdown">0</span>
                                     </a>
                                 </li>
@@ -934,11 +934,11 @@
                             <span class="price-with-span-div" style="display: none;font-size: 12px;">
                                 <span class="price-with-span">
                                 </span>
-                                <span class="price-with-span-val">  99</span>
+                                <span class="price-with-span-val productpricenosar0">  0</span>
                             </span>
 
- <span class="bold-font prodcutprice">
-                                    99
+ <span class="bold-font productprice0">
+                                    0
                                     SAR
                                 </span>
 
@@ -1082,7 +1082,9 @@
         var subproducty=document.querySelector('.subproducty')
         document.querySelector('.producttitle').textContent=mainproductname
         document.querySelector('.productpricenosar').textContent=productsdict[mainproductname][0]
+        document.querySelector('.productpricenosar0').textContent=productsdict[mainproductname][0]
         document.querySelector('.productprice').textContent=document.querySelector('.productprice').textContent.replace('0001',productsdict[mainproductname][0])
+        document.querySelector('.productprice0').textContent=document.querySelector('.productprice').textContent.replace('0',productsdict[mainproductname][0])
         document.querySelector('.productdescription1').innerHTML=editdes(productsdict[mainproductname][1])
         document.querySelector('.productdescription2').innerHTML=editdes(productsdict[mainproductname][1])
         document.querySelector('a.mainimage1').setAttribute('a','imgs/'+mainproductname.replace(/ /g,'-')+'.jpg')
