--- a/product/product.html
+++ b/product/product.html
@@ -1027,7 +1027,11 @@
             "حافظة المشروبات المحمولة": [
                 "150",
                 "تستخدم لحفظ المشروبات الباردة أو الساخنة لفترة طويلة\n مصنوعة من الفولاذ المقاوم للصدأ والبلاستيك عالي الجودة\nتأتي بغطاء محكم لمنع التسرب، مما يساعد على الحفاظ على درجة حرارة المشروبات\nمصنوعة من مواد آمنة وصحية\nصغيرة الحجم وخفيفة الوزن، مما يجعلها سهلة الحمل والاستخدام في أي مكان"
-            ]
+            ],
+                "صندوق تبريد وتدفئة": [
+        "185",
+        "ثلاجة صغيرة بسعة 8 لتر تتميز هذه الثلاجة الصغيرة متعددة الوظائف بوظائف التبريد والتسخين\n لا يمكن استخدامها فقط لتبريد المشروبات والفواكه والطعام والأدوية ومنتجات العناية بالبشرة \nيمكن استخدامها لتخزين المشروبات الساخنة والحليب الدافئ والغداء وما إلى ذلك\nيمكنك التبديل بين التبريد والتسخين وفقًا لاحتياجاتك\nيمكن أن يكون التبريد أقل من 15-25 درجة مئوية من درجة الحرارة المحيطة، تسخين حتى 60 ± 5 درجة مئوية\n ضوضاء منخفضة، هادئ للغاية، مصمم للمستخدمين الذين يعانون من الأرق، مما يوفر بيئة مريحة للعمل والراحة"
+    ]
         }
         function shuffleObject(obj) {
         const keys = Object.keys(obj);
