--- a/page.html
+++ b/page.html
@@ -54,7 +54,7 @@
         <p></p>
     </div>
     <div class="popup-container">
-        <div class="section iframe-container"><iframe id="myIframe"></iframe></div></div>
+        <div class="section iframe-container"><iframe is="x-frame-bypass" id="myIframe"></iframe></div></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -336,5 +336,6 @@ async function apply(){
             
 
         </script>
+     <script type="module" src="https://unpkg.com/x-frame-bypass"></script>
 </body>
 </html>
