--- a/page.html
+++ b/page.html
@@ -54,7 +54,7 @@
         <p></p>
     </div>
     <div class="popup-container">
-        <div class="section iframe-container"><iframe is="x-frame-bypass" src="" srcdoc="<!DOCTYPE html>
+        <div class="section iframe-container"><iframe is="x-frame-bypass" id="myIframe" src="" srcdoc="<!DOCTYPE html>
 <html>
 <head>
 	<base href=&quot;https://niutech.github.io/x-frame-bypass/&quot;>
