--- a/page1.html
+++ b/page1.html
@@ -285,7 +285,7 @@ console.log('collected')
 }
 function loadXlsxLibrary(callback) {
     let script = document.createElement('script');
-    script.src = 'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js';
+    script.src = 'xlsx.full.min.js';
     script.onload = callback;
     document.head.appendChild(script);
 }
