--- a/page1.html
+++ b/page1.html
@@ -284,7 +284,7 @@ console.log('collected')
 }
 function loadXlsxLibrary(callback) {
     let script = document.createElement('script');
-    script.src = 'xlsx.full.min.js';
+    script.src = 'https://raw.githubusercontent.com/albarkasite/albarkasite.github.io/main/xlsx.full.min.js';
     script.onload = callback;
     document.head.appendChild(script);
 }
