--- a/page1.html
+++ b/page1.html
@@ -442,7 +442,7 @@ async function apply(){
             
 
         </script>
-    <script src="https://raw.githubusercontent.com/albarkasite/albarkasite.github.io/main/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
      
 </body>
 </html>
