--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Extension Popup</title>
+    <title>Chrome Extension</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .popup-container {
@@ -50,6 +50,7 @@
                 <textarea class="form-control" id="links" rows="3" placeholder="Enter links"></textarea>
             </div>
             <button type="button" class="btn btn-primary" id="start">Start</button>
+            <button type="button" class="btn btn-primary" id="download" onclick="downloadAsXlsx(document.querySelector('#projectName').value)">Download</button>
         </div>
         <p></p>
     </div>
